--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -22,7 +22,7 @@
       <div>
         <ul class="ul flex">
           <li>
-            <a href="/"><span>Our logo</span></a>
+            <a href="/"><img src="images/logo.png" alt=""></a>
           </li>
           <li>
             <a href="/allevents"><span>Events</span></a>
