--- a/views/one-event.hbs
+++ b/views/one-event.hbs
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-
+<section id="allpage">
     <div class="main-contents-one-event">
         <div class="title-div">
 
@@ -17,9 +17,9 @@
         </div>
 
         <section class="one-event-wrapper">
-            <div class="img-div">
+            {{!-- <div class="img-div">
                 <img class="img" src="{{event.imgPath}}" alt="one_event_main_img">
-            </div>
+            </div> --}}
 
             <div class="one-event-info">
 
@@ -85,7 +85,7 @@
 
     </div>
 
-
+</section>
 </body>
 
 </html>
