--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,5 +1,5 @@
 section {
-    background-image: url("../images/home.jpeg");
+    background-image: url("../images/home.jpg");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
