--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,6 +1,6 @@
 * {
-  padding:0;
-  margin:0;
+  padding: 0;
+  margin: 0;
   box-sizing: border-box;
 }
 
@@ -8,8 +8,8 @@ body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   /* padding-top:5px;
   padding-bottom:5px; */
-  background-color:#f5cac3;
-  position:relative
+  background-color: #f5cac3;
+  position: relative
 }
 
 
@@ -19,16 +19,16 @@ a {
 
 nav {
   /* width:99.5vw; */
-  margin:0 auto;
+  margin: 0 auto;
   /* border-radius: 15px; */
-  background-color: rgba(255, 255, 255, 0.8);
-  position:fixed;
-  width:100vw;
-  padding:12px 0;
+  background-color: rgba(255, 255, 255, 0.90);
+  position: fixed;
+  width: 100vw;
+  padding: 12px 0;
 }
 
 .flex {
-  display:flex;
+  display: flex;
   justify-content: center;
 }
 
@@ -37,27 +37,29 @@ nav {
 }
 
 li {
-  padding:0 10px;
-  width:20vmin;
+  padding: 0 10px;
+  width: 20vmin;
 }
 
 .ul li a {
-  min-width:5vmin;
+  min-width: 5vmin;
   white-space: nowrap;
   text-overflow: ellipsis;
   text-align: center;
-  border-radius: 50px;
-  background-color:#f9ba54;
-  padding:1vh 2vw;
-  display:block;
-  font-size:1.1em;
+  border-radius: 10px;
+  /* background-color:RGB(255, 99, 71); */
+  color:darkgreen;
+  padding: 1vh 2vw;
+  display: block;
+  font-size: 1.5em;
   text-decoration: none;
-  color:white;
+  /* color:white; */
   font-weight: bolder;
+
 }
 
 /* Animation */
-.ul li a:hover {
+/* .ul li a:hover {
   background-color: #f77f00;
   -webkit-transform: rotate(360deg);
   transform: rotate(-15deg);
@@ -66,95 +68,108 @@ li {
 .ul li a {
   -webkit-transition: -webkit-transform .2s ease-in-out;
   transition: transform .2s ease-in-out;
-}
+} */
+
 /* End animation */
 
 #blank1 {
-  width:2vw
+  width: 2vw
 }
 
 #blank {
-  width:6vw
+  width: 6vw
 }
 
 @media only screen and (max-width:1500px) {
   body {
-  font: 12px "Lucida Grande", Helvetica, Arial, sans-serif;
-  /* padding-top:5px;
+    font: 12px "Lucida Grande", Helvetica, Arial, sans-serif;
+    /* padding-top:5px;
   padding-bottom:5px */
-}
-li {
-  padding:0 10px;
-  width:25vmin;
-}
-.ul li a {
-  min-width:5vmin;
-  width:100%;
-  text-align: center;
-  border-radius: 50px;
-  background-color:#f9ba54;
-  padding:1vh 0;
-  display:block;
-  font-size:1.1em;
-  text-decoration: none;
-  color:white;
-  font-weight: bolder;
-}
+  }
+
+  li {
+    padding: 0 10px;
+    width: 25vmin;
+  }
+
+  .ul li a {
+    min-width: 5vmin;
+    width: 100%;
+    text-align: center;
+    border-radius: 50px;
+    background-color: #f9ba54;
+    padding: 1vh 0;
+    display: block;
+    font-size: 1.1em;
+    text-decoration: none;
+    color: white;
+    font-weight: bolder;
+  }
 }
 
 @media only screen and (max-width:1100px) {
   body {
-  font: 10px "Lucida Grande", Helvetica, Arial, sans-serif;
-  /* padding-top:5px;
+    font: 10px "Lucida Grande", Helvetica, Arial, sans-serif;
+    /* padding-top:5px;
   padding-bottom:5px */
-}
-li {
-  padding:0 10px;
-  width:25vmin;
-}
-.ul li a {
-  min-width:10vmin;
-  white-space: nowrap;
-  text-overflow: ellipsis;
-  text-align: center;
-  border-radius: 50px;
-  background-color:#f9ba54;
-  padding:1vh 1.5vw;
-  display:block;
-  font-size:1.1em;
-  text-decoration: none;
-  color:white;
-  font-weight: bolder;
-}
-#blank {
-  width:0vw
-}
+  }
+
+  li {
+    padding: 0 10px;
+    width: 25vmin;
+  }
+
+  .ul li a {
+    min-width: 10vmin;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    text-align: center;
+    border-radius: 50px;
+    background-color: #f9ba54;
+    padding: 1vh 1.5vw;
+    display: block;
+    font-size: 1.1em;
+    text-decoration: none;
+    color: white;
+    font-weight: bolder;
+  }
+
+  #blank {
+    width: 0vw
+  }
 }
 
 @media only screen and (max-width:750px) {
   body {
-  font: 9px "Lucida Grande", Helvetica, Arial, sans-serif;
-  /* padding-top:5px;
+    font: 9px "Lucida Grande", Helvetica, Arial, sans-serif;
+    /* padding-top:5px;
   padding-bottom:5px */
+  }
+
+  li {
+    padding: 0 7px;
+    width: 20vmin;
+  }
+
+  .ul li a {
+    min-width: 4vmin;
+    width: 100%;
+    text-align: center;
+    border-radius: 50px;
+    background-color: #f9ba54;
+    padding: 1vh 0;
+    display: block;
+    font-size: 1.1em;
+    text-decoration: none;
+    color: white;
+    font-weight: bolder;
+  }
+
+  #blank {
+    width: 2.5vw
+  }
 }
-li {
-  padding:0 7px;
-  width:20vmin;
-}
-.ul li a {
-  min-width:4vmin;
-  width:100%;
-  text-align: center;
-  border-radius: 50px;
-  background-color:#f9ba54;
-  padding:1vh 0;
-  display:block;
-  font-size:1.1em;
-  text-decoration: none;
-  color:white;
-  font-weight: bolder;
-}
-#blank {
-  width:2.5vw
-}
+
+img{
+  width: 5vw;
 }
