--- a/views/edit_profile.hbs
+++ b/views/edit_profile.hbs
@@ -32,8 +32,8 @@
                 <input type="text" name="city" value="{{user.address.city}}">
             </div>
             <div>
-                <label class="about_me" for="description">About me</label>
-                <input type="text" name="description" value="{{user.description}}">
+                <label for="description">About me</label>
+                <textarea  class="about_me" rows="5" type="text" name="description" >{{user.description}}</textarea>
             </div>
             <div>
                 <label for="profilePicturePath">Profile picture</label>
