--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,9 +9,10 @@
 <body>
     <section id="backgroundhome">
 
-        <h1 style="padding-bottom:100px">Perfecly Food</h1>
+        <h1 style="padding-bottom:100px"></h1>
 
-        <h1 id="textBox"></h1>
+        <h1 id="textBox">Perfectly Food</h1>
+        <h2>- Your culinary experiences in authentic settings -</h2>
 
 
     </section>
