--- a/views/one-event.hbs
+++ b/views/one-event.hbs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+{{!-- <!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body> --}}
 <section id="allpage">
     <div class="main-contents-one-event">
         <div class="title-div">
@@ -33,6 +33,8 @@
                     <h3>{{event.type}}</h3>
                     <h4>Date</h4>
                     <p>{{event.dateOfEvent}}</p>
+                    <h4>Chef</h4>
+                    <p>{{event.chef.firstName}}</p>
                     <h4>Menu</h4>
                     <h5>Starter</h5>
                     <p>{{event.menu.starter}}</p>
@@ -42,9 +44,8 @@
                     <p>{{event.menu.dessert}}</p>
                     <h4>Location</h4>
                     <p>{{event.location.city}}</p>
-                    <h4>Chef</h4>
-                    <p>{{event.chef.firstName}}</p>
-                    <h4>guests</h4>
+                 
+                    <h4>Guests</h4>
 
                     {{#each event.guests}}
                     <p>{{this.firstName}}</p>
@@ -57,7 +58,7 @@
                     <p>{{event.pricePP}} EUR</p>
                     <h4>Theme of the event</h4>
                     <p>{{event.theme}}</p>
-                    <h4>"Restrictions"</h4>
+                    <h4>Diet</h4>
                     {{#each event.restrictions}}
                     <p>{{this.restrictions}}</p>
                     {{/each}}
@@ -78,7 +79,7 @@
                 {{/unless}}
                 {{/if}}
 
-                <button>You need to be logged in</button>
+                <article>You need to be logged in to join the event</article>
             </div>
 
         </section>
@@ -86,6 +87,6 @@
     </div>
 
 </section>
-</body>
+{{!-- </body>
 
-</html>
+</html> --}}
