--- a/public/stylesheets/create.css
+++ b/public/stylesheets/create.css
@@ -1,20 +1,22 @@
 * {
     box-sizing: border-box;
     margin: 0;
-    padding: 0
+    padding: 0;
+    /* border:1px solid black; */
 }
 
-section {
-    padding: 6vmin;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+main {
+  padding-top: 17vmin;
 }
 
-/* #form {
-  display:flex;
-  flex-direction: row;
-} */
+h1 {
+  text-align:center;
+  text-decoration: underline;
+}
+
+article {
+  width:30vw;
+}
 
     @media only screen and (max-width:1400px) and (min-width:1301px){
     .section {
@@ -53,9 +55,15 @@ h3 {
   padding-top:15px
 }
 
+
 #form {
-  margin: 30px auto;
-  width: 380px;
+  width:95vw;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  border: 2px solid goldenrod;
+  margin: 15px auto;
+  padding: 15px 0;
 }
 
 #form label {
@@ -63,7 +71,7 @@ h3 {
   display: inline-block;
   margin-bottom: 10px;
   text-align: center;
-  width: 100%;
+  width: 50%;
 }
 
 #form input,
@@ -74,7 +82,7 @@ h3 {
   font-size: 14px;
   outline: 0;
   padding: 4px;
-  width: 100%;
+  width: 50%;
   margin-bottom: 20px;
 }
 
@@ -96,7 +104,7 @@ h3 {
   text-decoration: none;
   text-transform: uppercase;
   transition: .3s ease background;
-  width: 100%;
+  width: 50%;
 }
 
 #form button:hover {
