--- a/public/stylesheets/managepage.css
+++ b/public/stylesheets/managepage.css
@@ -1,35 +1,39 @@
 
-.main-contents-events {
-    border: 1px solid black;
+  .main-contents-events {
     font-family: Arial;
     display: block;
   }
   
-  .title-div {
+  /* .title-div {
     background-color: lightblue;
     color: white;
     text-align: center;
-  }
+  } */
 
   .events-wrapper{
     display: flex;
-    border: 1px solid black;
-    padding: 10p;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 10px;
     margin: 10px;
   }
   
   .events-title {
-      padding: 20px;
+    padding: 20px;
+    text-decoration: underline;
   }
 
   .events-info{
-    flex-direction: row;
     padding: 20px;
     text-align: center;
-    margin: 20px;
-    width: 25%;
+    width:18%;
+    margin:1%;
+    /* margin: 20px;
+    width: 25%; */
     margin: auto;
-    border: 1px solid black;
+    background-color: RGB(255, 255, 255, 0.75);
+    border-radius: 10px;
+    border: 1.5px solid goldenrod;
   }
   
   .img_events_all {
@@ -37,7 +41,7 @@
   }
 
   p {
-    height: 45px;
+    height: 37px;
   }
 
   p>a {
@@ -48,19 +52,53 @@
     border:1px solid lightblue;
   }
 
-button {
-    padding: 10px 20px;
-   
-}
+  .button {
+    padding: 10px 0;
+    width:33.33%;
+  }
 
-h3 {
-  text-align: center;
-}
-  
-  
-  
- 
-  
- 
-  
-  
+/*  background-color: RGB(255, 99, 71);
+    border-radius: 10px;
+    border:none; */
+
+  .button2 {
+    padding: 10px 0;
+    width:50%;
+  }
+
+  .marg {
+    margin-right:5px;
+  }
+
+  .button-flex {
+    /* display:block; */
+    display:flex;
+    justify-content: center;
+  }
+
+  .form {
+    padding:0;
+  }
+  .button-form {
+    width:100%;
+    height:100%;
+  }
+
+  .link {
+    text-decoration: none;
+    padding:15%;
+    text-align: center;
+  }
+
+  #hand {
+    cursor: pointer;
+  }
+
+  h1 {
+    text-align: center;
+    padding-top: 15vmin !important;
+  }
+
+  h3 {
+    text-align: center;
+  }
