--- a/views/edit_profile.hbs
+++ b/views/edit_profile.hbs
@@ -1,7 +1,7 @@
 <section>
 
     <form action="/myprofile" method="post" enctype="multipart/form-data">
-        <div>
+        <div id="picture-middle">
             <img src="{{user.profilePicturePath}}" alt="">
         </div>
         <div id="form_part">
