--- a/views/one-event.hbs
+++ b/views/one-event.hbs
@@ -65,7 +65,7 @@
 
             </div>
             <div class="buttons-div">
-                <button>Details about the Chef</button>
+                <button><a href="/member/{{event.chef._id}}">Details about the Chef</a></button>
 
                 {{!-- Appears only if logged in to join an event --}}
 
