--- a/views/manage-page.hbs
+++ b/views/manage-page.hbs
@@ -8,7 +8,7 @@
   <title>Document</title>
 </head>
 
-<body>
+<body class="hello">
   <div class="main-contents-events">
     {{!-- <div class="title-div"> --}}
       <h1 class="events-title">Manage Your Events</h1>
@@ -64,9 +64,10 @@
         {{!-- <p>{{this.dateOfEvent}}</p> --}}<p>May 03 2020 09:30</p>
         <h4>Location</h4>
         <p>{{this.location.city}}</p>
+        {{!-- {{#unless guestEvents.restrictions}} --}}
         <h4>Restrictions</h4>
         <p>{{this.restrictions}}</p>
-
+        {{!-- {{/unless}} --}}
         <div class="button-flex">
           <button class="button2 marg"><a class="link" href="/event/{{this._id}}">Details</a></button>
 
