--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -8,7 +8,7 @@
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
   /* padding-top:5px;
   padding-bottom:5px; */
-  background-color: #f5cac3;
+  /* background-color: #f5cac3; */
   position: relative
 }
 
