--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -22,7 +22,7 @@
       <div>
         <ul class="ul flex">
           <li class="li">
-            <a href="/"><img src="" alt="">Logo</a>
+            <a href="/"><img src="" alt="">Home</a>
           </li>
           <li class="li">
             <a href="/allevents"><span>Events</span></a>
