--- a/views/index.hbs
+++ b/views/index.hbs
@@ -10,11 +10,11 @@
     <section id="backgroundhome">
 
         <h1 style="padding-bottom:100px"></h1>
-
+<div id="home-title">
         <h1 id="textBox">Perfectly Food</h1>
         <h2>- Your culinary experiences in authentic settings -</h2>
 
-
+</div>
     </section>
 </body>
 </html>
